{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 90,
  "lineage": "0d7fbeaf-50e8-cef1-25a5-612f274d7600",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01da2dede72196ed8",
            "domain": "vpc",
            "id": "eipalloc-01da2dede72196ed8",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-192-221-61.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.221.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fooddocs-elastic-ip"
            },
            "tags_all": {
              "Name": "fooddocs-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534652216657:internet-gateway/igw-0ec6711d6002a2b68",
            "id": "igw-0ec6711d6002a2b68",
            "owner_id": "534652216657",
            "vpc_id": "vpc-07c2d004413884e68"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01da2dede72196ed8",
            "connectivity_type": "public",
            "id": "nat-08cc3a5e35381c7b5",
            "network_interface_id": "eni-00d393c298d9eeb4a",
            "private_ip": "10.0.0.231",
            "public_ip": "18.192.221.61",
            "subnet_id": "subnet-020497dae4193db77",
            "tags": {
              "Name": "fooddocs-NATGateway"
            },
            "tags_all": {
              "Name": "fooddocs-NATGateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ngw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01fd1e965a9a4c7541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08cc3a5e35381c7b5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01fd1e965a9a4c754",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.ngw",
            "aws_route_table.ngw_route_table",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ec6711d6002a2b68",
            "id": "r-rtb-044b46dae4e237f001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-044b46dae4e237f00",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ngw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534652216657:route-table/rtb-01fd1e965a9a4c754",
            "id": "rtb-01fd1e965a9a4c754",
            "owner_id": "534652216657",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c2d004413884e68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534652216657:route-table/rtb-044b46dae4e237f00",
            "id": "rtb-044b46dae4e237f00",
            "owner_id": "534652216657",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c2d004413884e68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ngw_route_table_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08909866e032cf981",
            "route_table_id": "rtb-01fd1e965a9a4c754",
            "subnet_id": "subnet-0eed448958b851982"
          },
          "dependencies": [
            "aws_route_table.ngw_route_table",
            "aws_subnet.private_subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01de1e81cfffac1eb",
            "route_table_id": "rtb-044b46dae4e237f00",
            "subnet_id": "subnet-020497dae4193db77"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.public_subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534652216657:security-group/sg-02de4fc38e640b8f5",
            "description": "ECS Allowed Ports",
            "egress": [],
            "id": "sg-02de4fc38e640b8f5",
            "ingress": [],
            "name": "fooddocs-ECSSecurityGroup",
            "name_prefix": "",
            "owner_id": "534652216657",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c2d004413884e68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3048151064",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02de4fc38e640b8f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534652216657:subnet/subnet-0eed448958b851982",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eed448958b851982",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "534652216657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fooddocs-private-subnet1"
            },
            "tags_all": {
              "Name": "fooddocs-private-subnet1"
            },
            "vpc_id": "vpc-07c2d004413884e68"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534652216657:subnet/subnet-020497dae4193db77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020497dae4193db77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "534652216657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fooddocs-public-subnet1"
            },
            "tags_all": {
              "Name": "fooddocs-public-subnet1"
            },
            "vpc_id": "vpc-07c2d004413884e68"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:534652216657:vpc/vpc-07c2d004413884e68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cd9a7be70c681873",
            "default_route_table_id": "rtb-0f7590e3d0d4dafad",
            "default_security_group_id": "sg-055e44e9cd9f89fc8",
            "dhcp_options_id": "dopt-06d4fdc0753b7ec66",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07c2d004413884e68",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7590e3d0d4dafad",
            "owner_id": "534652216657",
            "tags": {
              "Name": "fooddocs-VPC"
            },
            "tags_all": {
              "Name": "fooddocs-VPC"
            }
          }
        }
      ]
    }
  ]
}